--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-
+    <script src="/assets/lib/jquery-1.12.0.min.js"></script>
+    <script src="/assets/lib/jquery.magnific-popup.min.js"></script>
+    <script src="/assets/js/index.js"></script>
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
 
